// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`any type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"any\\"
    }
  }
}"
`;

exports[`bool type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"bool\\"
    }
  }
}"
`;

exports[`collection type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"list(string)\\"
    }
  }
}"
`;

exports[`default value 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"default\\": \\"my-val\\"
    }
  }
}"
`;

exports[`description 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"description\\": \\"A Test Variable\\"
    }
  }
}"
`;

exports[`dynamic name 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test_testvariable_9CDF30A7\\": {
      \\"type\\": \\"string\\"
    }
  }
}"
`;

exports[`map collection type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"map(bool)\\"
    }
  }
}"
`;

exports[`number type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"number\\"
    }
  }
}"
`;

exports[`object type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"default\\": {
        \\"internal\\": 8300,
        \\"protocol\\": \\"tcp\\"
      },
      \\"type\\": \\"object({internal=number, protocol=string})\\"
    }
  }
}"
`;

exports[`reference 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"string\\"
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_testresource_F1C68B60\\": {
        \\"name\\": \\"\${var.test-variable}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-resource\\",
            \\"uniqueId\\": \\"test_testresource_F1C68B60\\"
          }
        }
      }
    }
  }
}"
`;

exports[`set collection type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"set(number)\\"
    }
  }
}"
`;

exports[`string type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"string\\"
    }
  }
}"
`;

exports[`tuple type 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
      \\"type\\": \\"tuple(bool, list(number))\\"
    }
  }
}"
`;
